@@ -3,6 +3,7 @@ body#ext-dam-mod-tools-index-php,
 body#ext-dam-mod-list-index-php,
 body#ext-dam-mod-info-index-php,
 body#ext-dam-mod-main-tx-dam-navframe-php,
+body#ext-dam-index-mod1-index-php,
 body#ext-dam-mod-tools-tx-dam-navframe-php {
 	margin: 0;
 	padding: 0;
